crates/analyzer/tests/snapshots/errors__call_undefined_function_on_external_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: No function `doesnt_exist` exists on type `Foo`
  ┌─ compile_errors/call_undefined_function_on_external_contract.fe:9:25
  │
9 │         Foo(address(0)).doesnt_exist()
  │                         ^^^^^^^^^^^^ undefined function


